package behavioral.chainofresponsilibity.handler;

import behavioral.chainofresponsilibity.Log;

public interface  Handler {
  public void log(Log log);
}
